<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rohit.prime_game.Start">



    <Button
        android:text="@string/nextQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextBtn"
        android:onClick="nextQ"
        android:layout_below="@+id/tbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_start"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_start"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@+id/activity_start"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.65999997" />

    <TextView
        android:text="@string/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@+id/activity_start"
        app:layout_constraintBottom_toBottomOf="@+id/activity_start"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_start"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_start"
        android:layout_marginLeft="16dp"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:text="@string/tru"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/tbutton"
        android:onClick="verify"
        android:layout_alignBaseline="@+id/fbutton"
        android:layout_alignBottom="@+id/fbutton"
        android:layout_toStartOf="@+id/nextBtn"
        android:layout_toLeftOf="@+id/nextBtn"

        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@+id/activity_start"
        app:layout_constraintBottom_toBottomOf="@+id/activity_start"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_start"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_start"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.15" />

    <Button
        android:text="@string/fals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fbutton"
        android:onClick="verify"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@+id/activity_start"
        app:layout_constraintBottom_toBottomOf="@+id/activity_start"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_start"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_start"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.84" />

    <Button

        android:text="@string/show_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:drawableRight="@drawable/correctbutton"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_start"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_start"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_start"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@+id/activity_start"
        app:layout_constraintVertical_bias="0.97"
        android:onClick="showAnswer"
        style="?android:attr/borderlessButtonStyle"
        />

    <Button
        android:text="@string/show_hint"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_marginEnd="16dp"
        android:drawableRight="@drawable/correctbutton"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintRight_toRightOf="@+id/activity_start"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_start"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_start"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@+id/activity_start"
        app:layout_constraintVertical_bias="0.83"
        android:onClick="showHint"
        />


</android.support.constraint.ConstraintLayout>
